[gd_scene load_steps=13 format=3 uid="uid://dx16i2x7x0nbl"]

[ext_resource type="Script" uid="uid://cdibgfgda3jep" path="res://assets/scripts/Main.gd" id="1_3dxm6"]
[ext_resource type="PackedScene" uid="uid://bvj0p1d1cymu5" path="res://assets/Scenes/Platform.tscn" id="1_glv2v"]
[ext_resource type="PackedScene" uid="uid://bqkhbskerc8p1" path="res://assets/Scenes/Player.tscn" id="2_uu6xs"]
[ext_resource type="Script" uid="uid://m3ypjrvld0be" path="res://assets/scripts/platform_spawner.gd" id="3_r0du0"]
[ext_resource type="PackedScene" uid="uid://dqourqwgfj8we" path="res://assets/Scenes/SmallPlatform.tscn" id="4_fos0i"]
[ext_resource type="PackedScene" uid="uid://cpgu8wbjl1hq7" path="res://assets/Scenes/BigPlatform.tscn" id="5_3dxm6"]
[ext_resource type="PackedScene" uid="uid://dthy5rhm6j2yn" path="res://assets/Scenes/Coin.tscn" id="6_lgr22"]
[ext_resource type="PackedScene" uid="uid://c1ao1gt284kb3" path="res://assets/Scenes/BonusPlatform.tscn" id="6_trn2v"]
[ext_resource type="PackedScene" uid="uid://c5ru5xjuldg1j" path="res://assets/Scenes/MovingPlatform.tscn" id="7_03owx"]
[ext_resource type="PackedScene" uid="uid://cve2v30wlwo6m" path="res://assets/Scenes/ShopPlatform.tscn" id="9_20pc6"]
[ext_resource type="Texture2D" uid="uid://b5vnntkk608nt" path="res://assets/sprites/Background.png" id="10_wkp8b"]

[sub_resource type="LabelSettings" id="LabelSettings_fos0i"]

[node name="Main" type="Node2D"]
script = ExtResource("1_3dxm6")
double_jump_cost = 25

[node name="Player" parent="." instance=ExtResource("2_uu6xs")]
position = Vector2(21, -42)
scale = Vector2(6, 6)

[node name="PlatformSpawner" type="Node2D" parent="."]
script = ExtResource("3_r0du0")
small_platform_scene = ExtResource("4_fos0i")
big_platform_scene = ExtResource("5_3dxm6")
bonus_platform_scene = ExtResource("6_trn2v")
bonus_platform_chance = 0.2
moving_platform_scene = ExtResource("7_03owx")
moving_platform_chance = 0.25
coin_scene = ExtResource("6_lgr22")
coin_chance = 0.5
shop_platform_scene = ExtResource("9_20pc6")
max_gap_y = 85.0

[node name="Coins" type="Node2D" parent="."]

[node name="Platforms" type="Node2D" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("1_glv2v")]
position = Vector2(12, -24)

[node name="UI" type="CanvasLayer" parent="."]

[node name="CoinLabel" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = -0.48200002
anchor_top = -0.95800006
anchor_right = -0.48200002
anchor_bottom = -0.95800006
offset_left = 554.26404
offset_top = 640.78406
offset_right = 620.26404
offset_bottom = 663.78406
text = "Coins: 0"

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = -0.48200002
anchor_top = -0.9990001
anchor_right = -0.48200002
anchor_bottom = -0.9990001
offset_left = 555.26404
offset_top = 647.35205
offset_right = 633.26404
offset_bottom = 670.35205
text = "Height = 0"
label_settings = SubResource("LabelSettings_fos0i")

[node name="GameOverPanel" type="ColorRect" parent="UI"]
custom_minimum_size = Vector2(300, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -20.0
offset_right = 68.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 1, 1)

[node name="TitleLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 99.0
offset_top = 59.0
offset_right = 186.0
offset_bottom = 82.0
text = "Game Over"

[node name="HintLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 81.0
offset_top = 76.0
offset_right = 211.0
offset_bottom = 99.0
text = "Press r to restart"

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.5
offset_top = -89.0
offset_right = 170.5
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuyJumpButton" type="Button" parent="UI/Panel"]
layout_mode = 0
offset_left = 6.0
offset_top = 11.0
offset_right = 201.0
offset_bottom = 42.0
text = "Increase Jump "

[node name="BuyDoubleJump" type="Button" parent="UI/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 63.0
offset_right = 263.0
offset_bottom = 94.0
text = "Unlock Double Jump"

[node name="CloseShop" type="Button" parent="UI/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 106.0
offset_right = 60.0
offset_bottom = 137.0
text = "Close"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1, 0.3)
motion_mirroring = Vector2(2000, 6000)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("10_wkp8b")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 6000)
